--- a/themes/ocean/layout/_partial/footer.ejs
+++ b/themes/ocean/layout/_partial/footer.ejs
@@ -5,8 +5,8 @@
     </div>
     <ul class="list-inline">
       <li>&copy; <%= date(new Date(), 'YYYY') %> <%= config.title %></li>
-      <li><%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a></li>
-      <li><%= __('Theme ') %> <a href="https://github.com/zhwangart/hexo-theme-ocean">Ocean</a></li>
+      <li><%= __('powered_by') %> <a href="http://www.alivn.top/" target="_self">Alivn</a></li>
+      <li><%= __('备案号 ') %> <a href="http://beian.miit.gov.cn/">蜀ICP备19039222号-1</a></li>
     </ul>
   </div>
 </footer>
