--- a/themes/ocean/source/css/_partial/navbar.styl
+++ b/themes/ocean/source/css/_partial/navbar.styl
@@ -28,29 +28,26 @@
           .nav-item-link
             &::before
               content '\f12a'
-        &:nth-child(3)         // gallery
+        &:nth-child(3)         // categories
+          .nav-item-link
+            &::before
+              content '\f18c'
+        &:nth-child(4)         // tags
+          .nav-item-link
+            &::before
+              content '\f153'
+        &:nth-child(5)         // gallery
           .nav-item-link
             &::before
               content '\f1a9'
-
-        //&:nth-child(4)         // categories
-        //  .nav-item-link
-        //    &::before
-        //      content '\f18c'
-        //&:nth-child(5)         // tags
-        //  .nav-item-link
-        //    &::before
-        //      content '\f153'
-
-        &:nth-child(4)         // about
+        &:nth-child(6)         // about
           .nav-item-link
             &::before
               content '\f174'
-
-        // &:nth-child(5)         // links
-        //   .nav-item-link
-        //     &::before
-        //       content '\f136'
+        &:nth-child(7)         // links
+          .nav-item-link
+            &::before
+              content '\f136'
 
 .navbar-bottom
   position absolute
