--- a/themes/ocean/source/css/_partial/highlight.styl
+++ b/themes/ocean/source/css/_partial/highlight.styl
@@ -61,6 +61,7 @@ $line-numbers
       -moz-user-select none
       -ms-user-select none
       user-select none
+      display none
     .gutter pre
       @extend $line-numbers
       text-align right
