--- a/themes/ocean/source/css/_partial/article.styl
+++ b/themes/ocean/source/css/_partial/article.styl
@@ -217,6 +217,8 @@ $article-share-link
     background google-color
     text-shadow 0 1px darken(google-color, 20%)
 
+#hbePass
+  margin-top 20px
 
 @import "tocbot"
 @import "gallery"
