--- a/themes/ocean/source/css/style.styl
+++ b/themes/ocean/source/css/style.styl
@@ -44,6 +44,19 @@ a
 img
   max-width 100%
 
+h1
+  font-size 32px
+h2
+  font-size 24px
+h3
+  font-size 18px
+h4
+  font-size 16px
+h5
+  font-size 14px
+h6
+  font-size 12px
+
 @import "_extend"
 @import "_partial/layou"
 @import "_partial/lists"
