--- a/themes/ocean/source/css/style.styl
+++ b/themes/ocean/source/css/style.styl
@@ -57,6 +57,15 @@ h5
 h6
   font-size 12px
 
+.watermark
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  pointer-events: none;
+  background-repeat: repeat;
+
 @import "_extend"
 @import "_partial/layou"
 @import "_partial/lists"
