--- a/themes/ocean/layout/_partial/after-footer.ejs
+++ b/themes/ocean/layout/_partial/after-footer.ejs
@@ -1,6 +1,7 @@
 <%- js('/js/jquery-2.0.3.min') %>
 <%- js('/js/jquery.justifiedGallery.min') %>
 <%- js('/js/lazyload.min') %>
+<%- js('/js/watermark.js') %>
 <%- js('/js/busuanzi-2.3.pure.min') %>
 <% if (theme.fancybox){ %>
   <%- js('fancybox/jquery.fancybox.min') %>
